--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       document.getElementById("nazgul-screech").play();
     }
   </script>
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="./scripts/fellowship.js"></script>
 </body>
 </html>
